# claude-dash

./: .gitignore  .pypirc.example  CLAUDE.md  MANIFEST.in  README.md  publish.sh  pyproject.toml  pytest.ini  run_tests.sh  setup.py
.github/workflows/: tests.yml
claude_dash/: __main__.py  __version__.py  main.py
claude_dash/config/defaults/: config.json
claude_dash/core/: adaptive_bounds.py  bayesian_limits.py  config_loader.py  default_config.py
claude_dash/providers/: claude_code_reader.py
claude_dash/ui/: __init__.py
claude_dash/ui/cards/: __init__.py  claude_code_card.py
tests/: README.md  conftest.py  show_current_session.py
tests/fixtures/: sample_entries.py
tests/integration/: test_end_to_end.py
tests/unit/: test_adaptive_bounds.py  test_bayesian_limits.py  test_bayesian_limits_simple.py  test_claude_code_reader.py  test_config_manager.py
