[tool.poetry]
name = "claude-dash"
version = "1.0.0"
description = "Know exactly when your Claude Code session will run out"
authors = ["Michael Coen <mhcoen@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/mhcoen/claude-dash"
repository = "https://github.com/mhcoen/claude-dash"
keywords = ["claude", "anthropic", "usage", "monitoring", "dashboard"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
]
packages = [{include = "claude_dash"}]

[tool.poetry.dependencies]
python = "^3.9,<3.13"
PyQt6 = "^6.4.0"
numpy = "^1.26.0"

[tool.poetry.scripts]
claude-dash = "claude_dash.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"